fix: harden workflows for clasp tokens

--- a/.github/workflows/gas-deploy.yml
+++ b/.github/workflows/gas-deploy.yml
@@ -36,6 +36,8 @@ jobs:
 
       - name: "Install dependencies"
         run: npm ci
+        env:
+          HUSKY: '0'
 
       - name: "Cache Playwright browsers"
         uses: actions/cache@v4
@@ -75,6 +77,8 @@ jobs:
 
       - name: "Install dependencies"
         run: npm ci
+        env:
+          HUSKY: '0'
 
       - name: "Cache Playwright browsers"
         uses: actions/cache@v4
@@ -163,21 +167,22 @@ jobs:
         env:
           CLASPRC_JSON: ${{ secrets.CLASPRC_JSON }}
         run: |
+          bash -eo pipefail <<'BASH'
           set -euo pipefail
-          [ -n "${CLASPRC_JSON:-}" ] || { echo "::error::Missing CLASPRC_JSON"; exit 1; }
+          : "${CLASPRC_JSON:?Missing CLASPRC_JSON}"
           node -e "
-            const fs=require('fs');const path=require('path');
-            const target=path.join(process.env.HOME||require('os').homedir(),'.clasprc.json');
+            const fs=require('fs'), path=require('path');
+            const p=process.env.HOME+'/.clasprc.json';
             let s=process.env.CLASPRC_JSON||''; let j;
             try { j=JSON.parse(s); }
-            catch(e) { s=s.replace(/\s+/g,''); j=JSON.parse(Buffer.from(s,'base64').toString()); }
-            if(!j.token && j.tokens && j.tokens.default){ j.token=j.tokens.default; }
-            fs.mkdirSync(path.dirname(target),{recursive:true});
-            fs.writeFileSync(target,JSON.stringify(j,null,2));
+            catch (e) { s=s.replace(/\s+/g,''); j=JSON.parse(Buffer.from(s,'base64').toString()); }
+            if(!j.token && j.tokens?.default) j.token=j.tokens.default;
+            fs.mkdirSync(path.dirname(p), {recursive:true});
+            fs.writeFileSync(p, JSON.stringify(j,null,2));
           "
           test -s "$HOME/.clasprc.json"
           cp "$HOME/.clasprc.json" "$GITHUB_WORKSPACE/.clasprc.json"
-        shell: bash
+          BASH
 
       - name: "Preflight: check TEST secrets & clasp & script"
         run: |
@@ -510,17 +515,22 @@ jobs:
         env:
           CLASPRC_JSON: ${{ secrets.CLASPRC_JSON }}
         run: |
+          bash -eo pipefail <<'BASH'
           set -euo pipefail
-          [ -n "${CLASPRC_JSON:-}" ] || { echo "::error::Missing CLASPRC_JSON"; exit 1; }
+          : "${CLASPRC_JSON:?Missing CLASPRC_JSON}"
           node -e "
-            const fs=require('fs');const p=process.env.HOME+'/.clasprc.json';
-            let s=process.env.CLASPRC_JSON||'';let j;
-            try{ j=JSON.parse(s); }catch(e){ s=s.replace(/\s+/g,''); j=JSON.parse(Buffer.from(s,'base64').toString()); }
-            if(!j.token && j.tokens && j.tokens.default){ j.token=j.tokens.default; }
+            const fs=require('fs'), path=require('path');
+            const p=process.env.HOME+'/.clasprc.json';
+            let s=process.env.CLASPRC_JSON||''; let j;
+            try { j=JSON.parse(s); }
+            catch (e) { s=s.replace(/\s+/g,''); j=JSON.parse(Buffer.from(s,'base64').toString()); }
+            if(!j.token && j.tokens?.default) j.token=j.tokens.default;
+            fs.mkdirSync(path.dirname(p), {recursive:true});
             fs.writeFileSync(p, JSON.stringify(j,null,2));
           "
           test -s "$HOME/.clasprc.json"
           cp "$HOME/.clasprc.json" "$GITHUB_WORKSPACE/.clasprc.json"
+          BASH
 
       - name: "Snapshot BEFORE"
         run: |
