--- a/.github/workflows/ci-preview.yml
+++ b/.github/workflows/ci-preview.yml
@@ -14,6 +14,10 @@ permissions:
   pull-requests: write
   issues: write
 
+defaults:
+  run:
+    shell: bash
+
 jobs:
   preview:
     runs-on: ubuntu-latest
@@ -37,25 +41,31 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with: { node-version: 20, cache: npm }
-      - run: npm ci
+      - name: Install dependencies
+        run: npm ci
+        env:
+          HUSKY: '0'
 
       - name: Write ~/.clasprc.json
         env:
           CLASPRC_JSON: ${{ secrets.CLASPRC_JSON }}
         run: |
+          bash -eo pipefail <<'BASH'
           set -euo pipefail
-          [ -n "${CLASPRC_JSON:-}" ] || { echo "::error::Missing CLASPRC_JSON"; exit 1; }
+          : "${CLASPRC_JSON:?Missing CLASPRC_JSON}"
           node -e "
-            const fs=require('fs');const p=process.env.HOME+'/.clasprc.json';
-            let s=process.env.CLASPRC_JSON||'';let j;
-            try{ j=JSON.parse(s); }
-            catch(e){ s=s.replace(/\s+/g,''); j=JSON.parse(Buffer.from(s,'base64').toString()); }
-            if(!j.token && j.tokens && j.tokens.default){ j.token=j.tokens.default; }
-            fs.mkdirSync(require('path').dirname(p),{recursive:true});
+            const fs=require('fs'), path=require('path');
+            const p=process.env.HOME+'/.clasprc.json';
+            let s=process.env.CLASPRC_JSON||''; let j;
+            try { j=JSON.parse(s); }
+            catch (e) { s=s.replace(/\s+/g,''); j=JSON.parse(Buffer.from(s,'base64').toString()); }
+            if(!j.token && j.tokens?.default) j.token=j.tokens.default;
+            fs.mkdirSync(path.dirname(p), {recursive:true});
             fs.writeFileSync(p, JSON.stringify(j,null,2));
           "
           test -s "$HOME/.clasprc.json"
           cp "$HOME/.clasprc.json" "$GITHUB_WORKSPACE/.clasprc.json"
+          BASH
 
       - name: Create GAS version
         id: ver
