--- a/.github/workflows/npm-outdated.yml
+++ b/.github/workflows/npm-outdated.yml
@@ -4,6 +4,10 @@ permissions:
   contents: write
   pull-requests: write
 
+defaults:
+  run:
+    shell: bash
+
 on:
   schedule:
     - cron: '0 1 * * 1'   # 每週一 01:00 UTC
@@ -19,6 +23,9 @@ jobs:
   outdated:
     name: Generate outdated inventory
     runs-on: ubuntu-latest
+    concurrency:
+      group: ${{ github.workflow }}:${{ github.job }}:${{ github.ref }}
+      cancel-in-progress: false
     env:
       RUN_LOCAL_E2E: ${{ format('{0}', github.event_name == 'workflow_dispatch' && inputs.run_e2e) }}
     steps:
@@ -33,6 +40,8 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+        env:
+          HUSKY: '0'
 
       # 僅手動且勾選 run_e2e 時，安裝瀏覽器並跑本地 @ui（不需要 secrets）
       - name: Install Playwright browsers
