--- a/.github/workflows/predeploy.yml
+++ b/.github/workflows/predeploy.yml
@@ -13,11 +13,17 @@ permissions:
   contents: write
   pull-requests: write
 
+defaults:
+  run:
+    shell: bash
+
 jobs:
   predeploy:
     name: Run predeploy suite
     runs-on: ubuntu-latest
-    container: mcr.microsoft.com/playwright:v1.55.1-jammy
+    concurrency:
+      group: ${{ github.workflow }}:${{ github.job }}:${{ github.ref }}
+      cancel-in-progress: false
     env:
       HAS_AUTH: ${{ secrets.PLAYWRIGHT_AUTH_STATE != '' }}
       HAS_URL: ${{ secrets.GAS_WEBAPP_URL != '' }}
@@ -35,25 +41,32 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+        env:
+          HUSKY: '0'
+
+      - name: Install Playwright dependencies
+        run: npx playwright install --with-deps
 
       - name: Write ~/.clasprc.json
         env:
           CLASPRC_JSON: ${{ secrets.CLASPRC_JSON }}
         run: |
+          bash -eo pipefail <<'BASH'
           set -euo pipefail
-          [ -n "${CLASPRC_JSON:-}" ] || { echo "::error::Missing CLASPRC_JSON"; exit 1; }
+          : "${CLASPRC_JSON:?Missing CLASPRC_JSON}"
           node -e "
-            const fs=require('fs');const path=require('path');
-            const target=path.join(process.env.HOME||require('os').homedir(),'.clasprc.json');
-            let s=process.env.CLASPRC_JSON||'';let j;
-            try{ j=JSON.parse(s); }
-            catch(e){ s=s.replace(/\s+/g,''); j=JSON.parse(Buffer.from(s,'base64').toString()); }
-            if(!j.token && j.tokens && j.tokens.default){ j.token=j.tokens.default; }
-            fs.mkdirSync(path.dirname(target),{recursive:true});
-            fs.writeFileSync(target, JSON.stringify(j,null,2));
+            const fs=require('fs'), path=require('path');
+            const p=process.env.HOME+'/.clasprc.json';
+            let s=process.env.CLASPRC_JSON||''; let j;
+            try { j=JSON.parse(s); }
+            catch (e) { s=s.replace(/\s+/g,''); j=JSON.parse(Buffer.from(s,'base64').toString()); }
+            if(!j.token && j.tokens?.default) j.token=j.tokens.default;
+            fs.mkdirSync(path.dirname(p), {recursive:true});
+            fs.writeFileSync(p, JSON.stringify(j,null,2));
           "
           test -s "$HOME/.clasprc.json"
           cp "$HOME/.clasprc.json" "$GITHUB_WORKSPACE/.clasprc.json"
+          BASH
 
       - name: Create GAS version (prod)
         id: ver_prod
