--- a/.github/workflows/npm-outdated.yml
+++ b/.github/workflows/npm-outdated.yml
@@ -6,7 +6,7 @@ permissions:
 
 defaults:
   run:
-    shell: bash
+    shell: bash {0}
 
 on:
   schedule:
@@ -62,10 +62,12 @@ jobs:
 
       - name: Generate outdated.json
         run: |
+          set -euo pipefail
           npm outdated --json > outdated.json || true
 
       - name: Publish summary
         run: |
+          set -euo pipefail
           node --input-type=module <<'NODE'
           import fs from 'node:fs';
           const out = process.env.GITHUB_STEP_SUMMARY;
