--- a/.github/workflows/npm-auto-upgrade.yml
+++ b/.github/workflows/npm-auto-upgrade.yml
@@ -46,6 +46,9 @@ jobs:
       - name: Install dependencies
         run: npm install --no-audit --no-fund
 
+      - name: Install Playwright browsers
+        run: npx playwright install --with-deps
+
       - name: Capture outdated (before)
         run: npm outdated --json > before.json || true
 
