--- a/.github/workflows/gas-deploy.yml
+++ b/.github/workflows/gas-deploy.yml
@@ -155,7 +155,7 @@ jobs:
       - name: "Install latest clasp"
         run: npm i -g @google/clasp
 
-      # --- write clasprc (raw JSON 或 base64 皆可) ---
+      # --- write clasprc (raw JSON 或 base64 皆可；Secret 請維持單一格式) ---
       - name: "Write ~/.clasprc.json"
         env:
           CLASPRC_JSON: ${{ secrets.CLASPRC_JSON }}
@@ -167,12 +167,11 @@ jobs:
           fi
           mkdir -p "$HOME"
           if [[ "${CLASPRC_JSON:0:1}" == "{" ]]; then
-            printf '%s' "$CLASPRC_JSON" > "$HOME/.clasprc.json"
+            echo "$CLASPRC_JSON" > "$HOME/.clasprc.json"
           else
             echo "$CLASPRC_JSON" | tr -d '[:space:]' | base64 -d > "$HOME/.clasprc.json"
           fi
           test -s "$HOME/.clasprc.json" || { echo "Failed to write ~/.clasprc.json" >&2; exit 1; }
-          cp "$HOME/.clasprc.json" "$GITHUB_WORKSPACE/.clasprc.json"
 
       - name: "Preflight: check TEST secrets & clasp & script"
         run: |
@@ -516,12 +515,11 @@ jobs:
           fi
           mkdir -p "$HOME"
           if [[ "${CLASPRC_JSON:0:1}" == "{" ]]; then
-            printf '%s' "$CLASPRC_JSON" > "$HOME/.clasprc.json"
+            echo "$CLASPRC_JSON" > "$HOME/.clasprc.json"
           else
             echo "$CLASPRC_JSON" | tr -d '[:space:]' | base64 -d > "$HOME/.clasprc.json"
           fi
           test -s "$HOME/.clasprc.json" || { echo "Failed to write ~/.clasprc.json" >&2; exit 1; }
-          cp "$HOME/.clasprc.json" "$GITHUB_WORKSPACE/.clasprc.json"
 
       - name: "Snapshot BEFORE"
         run: |
