ci: align health checks and artifacts

--- a/.github/workflows/predeploy.yml
+++ b/.github/workflows/predeploy.yml
@@ -99,8 +99,7 @@ jobs:
           set -euo pipefail
           BASE="${BASE_URL:-}"
           PATH_INPUT="${PATH_INPUT:-}"
-          if printf '%s' "$BASE" | grep -qE '^https://script\.google\.com/.*/exec/?$' && \
-             printf '%s' "$PATH_INPUT" | grep -qE '^/exec(/|\?|$)'; then
+          if [[ ("$BASE" == */exec || "$BASE" == */exec/) && -n "$PATH_INPUT" && "$PATH_INPUT" == /* ]]; then
             echo "::error::E2E_PATH should be query-only when base ends with /exec (use \"?route=...\")"
             exit 1
           fi
@@ -110,7 +109,7 @@ jobs:
 
       - name: Auto-repair remote E2E (@remote)
         if: ${{ env.HAS_AUTH == 'true' && env.HAS_URL == 'true' }}
-        run: node scripts/auto-repair.mjs --run "npm run e2e:remote" --verify "npm run health"
+        run: node scripts/auto-repair.mjs --run "npm run e2e:remote" --verify "node scripts/health-check.mjs"
         env:
           GAS_WEBAPP_URL: ${{ env.GAS_WEBAPP_URL }}
           E2E_PATH: ${{ env.E2E_PATH }}
@@ -118,27 +117,24 @@ jobs:
           LOCAL_BASE_URL: ${{ env.LOCAL_BASE_URL }}
 
       - name: Health check (200/302 or skip)
-        run: npm run health
+        run: node scripts/health-check.mjs
         env:
           GAS_WEBAPP_URL: ${{ env.GAS_WEBAPP_URL }}
           E2E_PATH: ${{ env.E2E_PATH }}
           E2E_TIMEOUT: ${{ env.E2E_TIMEOUT }}
 
-      - name: Build artifact index
-        if: always()
-        run: node scripts/build-artifact-index.mjs
-        env:
-          ARTIFACT_SOURCES: |
-            playwright-report
-            artifacts
-          ARTIFACT_INDEX_PATH: artifacts/index.json
-
       - name: Upload Playwright report
         if: ${{ always() }}
         uses: actions/upload-artifact@v4
         with:
-          name: playwright-report
-          path: |
-            playwright-report
-            artifacts/index.json
+          name: playwright-report-${{ github.job }}
+          path: artifacts/playwright-report
+          if-no-files-found: ignore
+
+      - name: Upload health artifacts
+        if: ${{ always() }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: health-check-${{ github.job }}
+          path: artifacts/health*.json
           if-no-files-found: ignore
