--- a/.github/workflows/npm-outdated.yml
+++ b/.github/workflows/npm-outdated.yml
@@ -60,8 +60,8 @@ jobs:
         if: ${{ always() && env.RUN_LOCAL_E2E == 'true' }}
         uses: actions/upload-artifact@v4
         with:
-          name: playwright-report
-          path: playwright-report
+          name: playwright-report-${{ github.job }}
+          path: artifacts/playwright-report
           if-no-files-found: ignore
 
       - name: Generate outdated.json
